# perfkit-dashbaord-gui

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
gui/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  main.hpp
libcore/: CMakeLists.txt  context.cpp  curl.cpp
libcore/include/: __cppheaders_ns__.h
libcore/include/core/: context.hpp  curl.hpp
third/libcurl-bundled-windows/: CMakeLists.txt  libcurl_imp.lib
third/nlohmann-json/: CMakeLists.txt
